--- a/html/style.css
+++ b/html/style.css
@@ -55,14 +55,15 @@
 }
 
 .shell-body li:before {
-    content: '$';
+    content: 'louis@pc $';
     position: absolute;
     left: 0;
     top: 0;
+    color:	#00FFFF;
 }
 
 .shell-body li {
     word-wrap: break-word;
     position: relative;
-    padding: 0 0 0 15px;
+    padding: 0 0 0 100px;
 }
